Bug 169805 - Display a pause (not play) button while already playing
Summary: Display a pause (not play) button while already playing
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: Gentoo Packages Linux
: VHI normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2008-08-25 18:48 UTC by erik_hahn
Modified: 2009-12-09 11:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description erik_hahn 2008-08-25 18:48:49 UTC
Version:           1.90 (using KDE 4.1.0)
Compiler:          gcc 4.3.1 
OS:                Linux
Installed from:    Gentoo Packages

While playing, the play button still displays the "play" symbol, but acts as a pause button. Instead, it should display the pause symbol, making the interface slightly more logical and intuitive.
Comment 1 Dan Meltzer 2008-08-25 18:52:31 UTC
This is a regression from using a graphicsview as the toolbar control.  It really needs to be fixed asap.  The icon never gets rerendered when the state changes, it shouldn't be to terrible to fix, but I'm not sure.
Comment 2 Sven Krohlas 2008-08-28 16:53:27 UTC
Ahould be fixed in revision 853967.