Make the PlayPause button actually switch its icon when playing.

BUG: 169805

svn path=/trunk/extragear/multimedia/amarok/; revision=853967